--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -80,7 +80,7 @@ p{
     opacity:.8
 }
 .button.primary{
-    background-color:#1B87EA;
+    background-color:#05445E;
     color:#fff
 }
 .button.primary.inverted{
@@ -89,7 +89,7 @@ p{
 }
 .button.secondary{
     background-color:transparent;
-    border:1.5px solid #1B87EA
+    border:1.5px solid #05445E
 }
 .button.small{
     font-size:9.6px;
@@ -154,7 +154,7 @@ input.inverted::placeholder{
     font-size:.85rem
 }
 .block-header-1 .nav-item.active a{
-    color:#1B87EA
+    color:#05445E
 }
 .block-header-1 .nav-item a{
     text-decoration:none;
@@ -164,7 +164,7 @@ input.inverted::placeholder{
     color:#666
 }
 .block-header-1 .nav-item.active a:hover{
-    color:#1B87EA
+    color:#05445E
 }
 .block-header-1 .nav-item:last-of-type{
     margin:0
@@ -198,7 +198,7 @@ input.inverted::placeholder{
     font-size:.85rem
 }
 .block-header-2 .nav-item.active a{
-    color:#1B87EA
+    color:#05445E
 }
 .block-header-2 .nav-item a{
     text-decoration:none;
@@ -208,7 +208,7 @@ input.inverted::placeholder{
     color:#666
 }
 .block-header-2 .nav-item.active a:hover{
-    color:#1B87EA
+    color:#05445E
 }
 .block-header-2 .nav-item:last-of-type{
     margin:0
@@ -233,7 +233,7 @@ input.inverted::placeholder{
     max-height:1.5rem
 }
 .block-hero-1{
-    --bg:#1B87EA;
+    --bg:#05445E;
     --text:#fff;
     display:-ms-flexbox;
     display:flex;
@@ -254,7 +254,7 @@ input.inverted::placeholder{
     }
 }
 .block-hero-2{
-    --bg:#1B87EA;
+    --bg:#05445E;
     --text:#fff;
     -ms-flex-direction:column;
     flex-direction:column;
@@ -400,7 +400,7 @@ input.inverted::placeholder{
 .block-cta-bar{
     padding:32px;
     padding:2rem;
-    background:#1B87EA;
+    background:#05445E;
     color:#fff
 }
 .block-cta-bar .columns{
@@ -690,7 +690,7 @@ input.inverted::placeholder{
     }
 }
 body{
-    font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Noto Sans,Ubuntu,Droid Sans,Helvetica Neue,sans-serif;
+    font-family:Poppins;
     font-size:16px
 }
 ::-moz-selection{
